2014-07-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #60666: Outdated data for Turkish lira
	* Resolves #59459: SelectViewHelper: DefaultOptionValue and Label with no effect (Thanks to Thomas Löffler)
	* Resolves #59451: SelectViewHelper returns no items (Thanks to Thomas Löffler)

2014-06-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #59300: Missing namespace for InvalidArgumentException
	* Resolves #59301: Missing "searchFields" configuration in ext_tables.php
	* Add localized fields as searchFields next time language pack is (re-)generated
	* Usage of $GLOBALS['typo3CacheManager'] and $GLOBALS['typo3CacheFactory'] are deprecated since 6.2

2014-04-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.1.0

2014-04-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Update the manual

2014-04-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #58100: Incorrect annotation for tableName on AbstractEntity
	* Resolves #58101: Make extension incompatible with extension "uncache"
	* Resolves #56327: Add select viewHelper with values from tables (Thanks to Carsten Biebricher)
	* Resolves #58100: Incorrect annotation for tableName on AbstractEntity
	* Resolves #58107: Add countryZones to country domain model
	* Use select viewHelper in test form

2014-03-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.0.10

2014-03-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56389: Fatal error: Call to a member function getCollatingLocale() on a non-object in LocalizationUtility.php

2014-03-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56954: getIsoCodeField() is protected but needed from outside

2014-02-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #52431: Localization of nameLocalized not working in preview of attribute

2014-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 6.0.9

2014-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56038: Language Pack Generator crashes in TYPO3 6.0
